cf_analysis_results/checkerframework_results/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8.txt
../../../../datasets/june2020_dataset/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8/src/net/slreynolds/ds/internal/util/Pair.java:61: error: (return) $$ 2 $$ @MustCallUnknown String $$ @MustCall String $$ ( 1027, 1053 ) $$ incompatible types in return.
		return "Pair ["+ one +  two + "]";
		                            ^
  type of expression: @MustCallUnknown String
  method return type: @MustCall String
../../../../datasets/june2020_dataset/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8/src/net/slreynolds/ds/export/SimpleGraphVizExporter.java:23: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-736 $$ java.io.PrintStream $$ regular method exit $$ ( 622, 643 ) $$ @MustCall method close may not have been invoked on temp-var-736 or any of its aliases.
    	ostream = makePrintStream(opts);
    	                         ^
  The type of object is: java.io.PrintStream.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8/src/net/slreynolds/ds/export/TulipExporter.java:29: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-765 $$ java.io.PrintStream $$ regular method exit $$ ( 824, 845 ) $$ @MustCall method close may not have been invoked on temp-var-765 or any of its aliases.
    	ostream = makePrintStream(opts);
    	                         ^
  The type of object is: java.io.PrintStream.
  Reason for going out of scope: regular method exit
../../../../datasets/june2020_dataset/url9ef4af9ae5_stevenreyn_RegionViewer_tgz-pJ8-net_slreynolds_ds_SecondTestJ8/src/net/slreynolds/ds/export/GraphMLExporter.java:21: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-908 $$ java.io.PrintStream $$ regular method exit $$ ( 546, 567 ) $$ @MustCall method close may not have been invoked on temp-var-908 or any of its aliases.
    	ostream = makePrintStream(opts);
    	                         ^
  The type of object is: java.io.PrintStream.
  Reason for going out of scope: regular method exit
4 errors
